manifests/01-kgateway/ping-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gw-ping
  namespace: kgateway-system
spec:
  parentRefs:
    - name: http
  rules:
    - matches:
        - path:
            type: Exact
            value: /.gw/ping
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.kgateway.dev
            kind: DirectResponse
            name: gw-ping
